--- a/Competition.Web/Competition.Web.csproj
+++ b/Competition.Web/Competition.Web.csproj
@@ -431,6 +431,7 @@
     <Content Include="Views\EventCriterias\EventCriteriaEditForm.cshtml" />
     <Content Include="Views\Score\_ScoreJudgeEditFormPartial2.cshtml" />
     <Content Include="Views\Score\_ScoreJudgeViewFormPartial.cshtml" />
+    <Content Include="Views\EventCriterias\Multi.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
