计时器初步恢复原有功能

--- a/Competition.EF/Competition.EF.csproj
+++ b/Competition.EF/Competition.EF.csproj
@@ -92,6 +92,10 @@
     <Compile Include="Migrations\202009280256366_minscore.designer.cs">
       <DependentUpon>202009280256366_minscore.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202009280928055_addAmount.cs" />
+    <Compile Include="Migrations\202009280928055_addAmount.designer.cs">
+      <DependentUpon>202009280928055_addAmount.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\CompetitionDbContext.cs" />
     <Compile Include="Model\CompetitionModels.cs" />
@@ -129,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202009280256366_minscore.resx">
       <DependentUpon>202009280256366_minscore.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009280928055_addAmount.resx">
+      <DependentUpon>202009280928055_addAmount.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
