--- a/TimerControl/App.config
+++ b/TimerControl/App.config
@@ -17,8 +17,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-     <add name="TimerContext"
-       connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=TimerControl;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
-       providerName="System.Data.SqlClient"/>
+    <add name="CompetitionDbContext"
+      connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=CompetitionDbContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
