--- a/Competition.EF/Competition.EF.csproj
+++ b/Competition.EF/Competition.EF.csproj
@@ -108,6 +108,10 @@
     <Compile Include="Migrations\202010240845169_addmultiscoredetailset.designer.cs">
       <DependentUpon>202010240845169_addmultiscoredetailset.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011080621145_AddCriteriaNote.cs" />
+    <Compile Include="Migrations\202011080621145_AddCriteriaNote.designer.cs">
+      <DependentUpon>202011080621145_AddCriteriaNote.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\CompetitionDbContext.cs" />
     <Compile Include="Model\CompetitionModels.cs" />
@@ -157,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010240845169_addmultiscoredetailset.resx">
       <DependentUpon>202010240845169_addmultiscoredetailset.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011080621145_AddCriteriaNote.resx">
+      <DependentUpon>202011080621145_AddCriteriaNote.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
