批量录入笔试成绩

--- a/Competition.Web/Competition.Web.csproj
+++ b/Competition.Web/Competition.Web.csproj
@@ -435,6 +435,7 @@
     <Content Include="Views\Score\_ScoreJudgeViewFormPartial.cshtml" />
     <Content Include="Views\EventCriterias\Multi.cshtml" />
     <Content Include="Views\Home\test.cshtml" />
+    <Content Include="Views\Schedule\BishiScoreMulti.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
