--- a/Competition.EF/App.config
+++ b/Competition.EF/App.config
@@ -15,9 +15,10 @@
         </providers>
     </entityFramework>
   <connectionStrings>
-  
-    <add name="CompetitionDbContext"
+	  <add name="CompetitionDbContext" connectionString="Data Source=192.168.1.10;Initial Catalog=CompetitonDbContext;Persist Security Info=True;User ID=sa;Password=sa@1234"
+		 providerName="System.Data.SqlClient" />
+    <!--<add name="CompetitionDbContext"
       connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=CompetitionDbContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
-      providerName="System.Data.SqlClient"/>
+      providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
 </configuration>
