--- a/Competition.Kanban/App.config
+++ b/Competition.Kanban/App.config
@@ -21,12 +21,14 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
   </startup>
   <connectionStrings>
-
-    <add name="CompetitionDbContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=CompetitionDbContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+ <add name="CompetitionDbContext" connectionString="Data Source=192.168.1.10;Initial Catalog=CompetitonDbContext;Persist Security Info=True;User ID=sa;Password=sa@1234"
+      providerName="System.Data.SqlClient" />
+    <!--<add name="CompetitionDbContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=CompetitionDbContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-    </providers>
+    
+	</providers>
   </entityFramework>
 </configuration>
