--- a/Competition.Web/Competition.Web.csproj
+++ b/Competition.Web/Competition.Web.csproj
@@ -189,6 +189,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bg.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -324,6 +325,7 @@
     <Content Include="Scripts\src\utils\setAttributes.js" />
     <Content Include="Scripts\src\utils\setStyles.js" />
     <Content Include="Scripts\src\utils\setupEventListeners.js" />
+    <Content Include="Scripts\umd\datav.map.vue.js" />
     <Content Include="Scripts\umd\popper-utils.js" />
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
@@ -434,8 +436,9 @@
     <Content Include="Views\EventCriterias\EventCriteriaEditForm.cshtml" />
     <Content Include="Views\Score\_ScoreJudgeViewFormPartial.cshtml" />
     <Content Include="Views\EventCriterias\Multi.cshtml" />
-    <Content Include="Views\Home\test.cshtml" />
+    <Content Include="Views\Report\test.cshtml" />
     <Content Include="Views\Schedule\BishiScoreMulti.cshtml" />
+    <Content Include="Views\Report\test2.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -484,6 +487,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="NewFolder1\NewFolder1\" />
     <Folder Include="Views\ScoreDetails\" />
   </ItemGroup>
   <ItemGroup>
